<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTimeActivity">

    <ImageView
        android:id="@+id/edit_time_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_time_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_time_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00FFFFFF"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_time_app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_text_iew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="标题"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="生日,节日,考试..."
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <TextView
                android:id="@+id/remark_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="备注"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/remark_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="想说的话,目标,格言..."
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_layout">

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button_background"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/date_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_recent_history" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/date_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="日期"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/date_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button_background"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/repeat_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_rotate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/repeat_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="重复设置"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/repeat_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="无" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/background_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button_background"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/background_image_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/background_image_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="图片"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>