<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/delete_time"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/share_time"
        android:icon="@android:drawable/ic_menu_share"
        android:title="share"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit_time"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="edit"
        app:showAsAction="always" />
</menu>
