<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/repeat_day_customize_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/repeat_day_customize_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="输入周期(天)"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/repeat_day_customize_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="取消" />

        <Button
            android:id="@+id/repeat_day_customize_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="确定" />
    </LinearLayout>
</LinearLayout>
