<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/edit_time_confirm"
        android:icon="@android:drawable/ic_menu_save"
        android:title="confirm"
        app:showAsAction="always" />
</menu>
